update chapter 3; fix vsftp server in xinetd; fix docker file

--- a/docker-tools/Makefile
+++ b/docker-tools/Makefile
@@ -3,12 +3,16 @@ socket_url=http://www.icir.org/christian/downloads/sock-0.3.2.tar.gz
 socket_dir=sock
 docker_registery=hub.docker.com
 
-.PHONY: default all clean
+.PHONY: default all clean docker-clean
 default: all
 
-clean:
+clean: clean-docker
 	rm -f netspy netspyd netspydd TCPclient TCPserver UDPclient UDPserver socket
 	$(MAKE) -C $(socket_dir) clean
+
+clean-docker:
+	docker rmi ut/netlab/ipgui
+	docker rmi ut/netlab/ipterm
 
 all: netspy TCPclient TCPserver UDPclient UDPserver socket netlab-term netlab-gui
 
@@ -32,17 +36,19 @@ socket:
 	$(MAKE) -C ${socket_dir}
 	cp ${socket_dir}/src/sock socket
 
-dockers: netlab-term netlab-gui
+dockers: netlab-gui
 gns3-ipterm:
 	docker pull gns3/ipterm
 gns3-webterm:
 	docker pull gns3/webterm
-netlab-term: netspy socket TCPserver UDPserver gns3-ipterm
-	docker build -t utnetlab/ipterm -f term.Dockerfile .
-netlab-gui: netlab-term gns3-webterm
-	docker build -t utnetlab/ipgui -f gui.Dockerfile .
+
+netlab-term: netspy socket TCPserver UDPserver TCPclient UDPclient
+	docker pull debian:jessie
+	docker build -t ut/netlab/term -f term.Dockerfile .
+netlab-gui: netlab-term
+	docker build -t ut/netlab/gui -f gui.Dockerfile .
 dockers-push:
 	docker commit utnetlab/term
 	docker commit utnetlab/gui
-	docker push $(docker_registery)/utnetlab/term
-	docker push $(docker_registery)/utnetlab/gui
+	docker push $(docker_registery)/ut/netlab/term
+	docker push $(docker_registery)/ut/netlab/gui
