--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
+# vscode
+.vscode/*
+
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
