docker tools: fix gui parent and fix goaccess log path

--- a/docker-tools/http/goaccess.conf
+++ b/docker-tools/http/goaccess.conf
@@ -62,7 +62,7 @@ no-color false
 # Specify the path to the input log file. If set, it will take
 # priority over -f from the command line.
 #
-#log-file /var/log/apache2/access.log
+log-file /var/log/apache2/access.log
 
 # Send all debug messages to the specified file. Needs to configured
 # with --enable-debug
