--- a/Figures/Fig-7.14/project-files/dynamips/092ce3ec-9b73-440e-94c5-6052eb3c1660/configs/i4_startup-config.cfg
+++ b/Figures/Fig-7.14/project-files/dynamips/092ce3ec-9b73-440e-94c5-6052eb3c1660/configs/i4_startup-config.cfg
@@ -22,6 +22,14 @@ line aux 0
  logging synchronous
  privilege level 15
  no login
+config term
+ int f0/0
+  ip addr 128.238.63.4 255.255.255.0
+  no shut
+ int f0/1
+  ip addr 128.238.65.4 255.255.255.0
+  no shut
+ exit
 !
 !
 end
