--- a/Figures/Fig-7.14/project-files/dynamips/a2d56e14-3c08-40fd-ac68-e27c69364581/configs/i3_startup-config.cfg
+++ b/Figures/Fig-7.14/project-files/dynamips/a2d56e14-3c08-40fd-ac68-e27c69364581/configs/i3_startup-config.cfg
@@ -22,6 +22,14 @@ line aux 0
  logging synchronous
  privilege level 15
  no login
+config term
+ int f0/0
+  ip addr 128.238.63.3 255.255.255.0
+  no shut
+ int f0/1
+  ip addr 128.238.64.3 255.255.255.0
+  no shut
+ exit
 !
 !
 end
