--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
-        apt install build-essential
+        sudo apt install build-essential
         cd docker-tools
         docker build . --file Dockerfile --tag my-image-name:$(date +%s)
