update github ci file

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
       run: |
         sudo apt install build-essential
         cd docker-tools
-        docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        make all
