--- a/docker-tools/Makefile
+++ b/docker-tools/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 socket_url=http://www.icir.org/christian/downloads/sock-0.3.2.tar.gz
 socket_dir=sock
 docker_registery=hub.docker.com
-docker_tag=9812
+docker_tag=9904
 
 .PHONY: default all clean docker-clean
 default: all
@@ -15,7 +15,7 @@ clean-socket:
 	$(MAKE) -C $(socket_dir) clean
 	$(MAKE) -C $(socket_dir) distclean
 
-all: netspy TCPclient TCPserver UDPclient UDPserver socket netlab-term netlab-gui netlab-http
+all: netspy TCPclient TCPserver UDPclient UDPserver socket netlab-term netlab-gui-web netlab-http
 
 netspy:
 	$(CC) netspydd.c -o netspydd
@@ -48,14 +48,14 @@ docker-pull-base:
 	docker pull dorowu/ubuntu-desktop-lxde-vnc
 
 netlab-term: netspy socket TCPserver UDPserver TCPclient UDPclient
-	docker build -t ut/netlab/term:$(docker_tag) -f term.Dockerfile .
+	docker build -t ut/netlab/term -t ut/netlab/term:$(docker_tag) -f term.Dockerfile .
 netlab-gui: netlab-term
-	docker build -t ut/netlab/gui:$(docker_tag) -f gui.Dockerfile .
+	docker build -t ut/netlab/gui -t ut/netlab/gui:$(docker_tag) -f gui.Dockerfile .
 netlab-gui-web: netlab-term
-	docker build -t ut/netlab/gui:$(docker_tag) -f gui.web.Dockerfile .
-	docker build -t ut/netlab/gui-s:$(docker_tag) -f gui.simple.Dockerfile .
+	docker build -t ut/netlab/gui -t ut/netlab/gui:$(docker_tag) -f gui.web.Dockerfile .
+	docker build -t ut/netlab/gui-s -t ut/netlab/gui-s:$(docker_tag) -f gui.simple.Dockerfile .
 netlab-http:
-	docker build -t ut/netlab/http-server -f http/http.Dockerfile ./http/
+	docker build -t ut/netlab/http-server -t ut/netlab/http-server:$(docker_tag) -f http/http.Dockerfile ./http/
 
 dockers-push:
 	docker commit ut/netlab/term
