--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Release Asset (term)
-        id: upload-release-asset 
+        id: upload-release-asset-term
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -43,7 +43,7 @@ jobs:
           asset_name: utnetlab_term.tar.xz
           asset_content_type: application/x-xzip
       - name: Upload Release Asset (gui)
-        id: upload-release-asset 
+        id: upload-release-asset-gui
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
