--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,18 +22,18 @@ jobs:
           docker build -t utnetlab/gui -t utnetlab/gui:$refName -f gui2.web.Dockerfile .
       - name: Compress the Docker images
         run: |
-          docker save utnetlab/term | xz -7 > utnetlab_term.tar.xz
-          docker save utnetlab/gui  | xz -7 > utnetlab_gui.tar.xz
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+          docker save utnetlab/term | xz -5 > utnetlab_term.tar.xz
+          docker save utnetlab/gui  | xz -5 > utnetlab_gui.tar.xz
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ github.ref }}
+      #     release_name: Release ${{ github.ref }}
+      #     draft: false
+      #     prerelease: false
       - name: Upload Release Asset (term)
         id: upload-release-asset-term
         uses: actions/upload-release-asset@v1
