--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,42 +13,70 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      # - name: Get Latest Release
+      #   id: get_release
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     upload_url=$(curl https://api.github.com/repos/UT-Network-Lab/TCP-IP-Laboratory/releases/latest | grep upload_url | cut -d'"' -f4)
+      #     echo "::set-output name=upload_url::$upload_url"
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Build the Figures
+        run: |
+          cd Figures
+          bash ./build-gns3p.sh
+          zip ../Figures.zip *.gns3p
+      - name: Build the Latex
+        run: |
+          docker run --rm --user="$(id -u):$(id -g)" -v "$PWD":"/repo" -w "/repo" dockershelf/latex:full   '/bin/sh -c "latexmk -pdf -interaction=nonstopmode -cd **/*.tex"''
+          zip Documents.zip [0-9]**/*.pdf
       - name: Build the Docker images
         run: |
           cd docker-tools
           refName=${{ github.ref }}
           refName=$(echo $refName | cut -d / -f 3)
           docker build -t utnetlab/term -t utnetlab/term:$refName -f term2.Dockerfile .
-        # docker build -t utnetlab/gui -t utnetlab/gui:$refName -f gui2.web.Dockerfile .
+          docker build -t utnetlab/gui -t utnetlab/gui:$refName -f gui2.web.Dockerfile .
       - name: Compress the Docker images
         run: |
-          docker save utnetlab/term | xz -3 > utnetlab_term.tar.xz
-        # docker save utnetlab/gui  | xz -3 > utnetlab_gui.tar.xz
-      - name: Get Latest Release
-        id: get_release
+          docker save utnetlab/term | xz -5 > utnetlab_term.tar.xz
+          docker save utnetlab/gui  | xz -5 > utnetlab_gui.tar.xz
+      - name: Upload Release Asset (Figures)
+        id: upload-release-asset-figures
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          upload_url=$(curl https://api.github.com/repos/UT-Network-Lab/TCP-IP-Laboratory/releases/latest | grep upload_url | cut -d'"' -f4)
-          echo "::set-output name=upload_url::$upload_url"
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: ${{ github.ref }}
-      #     release_name: Release ${{ github.ref }}
-      #     draft: false
-      #     prerelease: false
-      # output: ${{ steps.create_release.outputs.upload_url }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./Figures.zip
+          asset_name: Figures.zip
+          asset_content_type: application/zip
+      - name: Upload Release Asset (Documents)
+        id: upload-release-asset-documents
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./Documents.zip
+          asset_name: Documents.zip
+          asset_content_type: application/zip
       - name: Upload Release Asset (term)
         id: upload-release-asset-term
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./utnetlab_term.tar.xz
           asset_name: utnetlab_term.tar.xz
           asset_content_type: application/x-xzip
@@ -58,7 +86,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./utnetlab_gui.tar.xz
           asset_name: utnetlab_gui.tar.xz
           asset_content_type: application/x-xzip
