--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-# sudo: required
-# language: generic
-# services: docker
-# script:
+sudo: required
+language: generic
+services: docker
+script:
+  - docker run --rm --user="$(id -u):$(id -g)" -v "$PWD":"/repo" -w "/repo/Figures" --entrypoint "/bin/sh" kramos/alpine-zip "./build-gns3p.sh"
 # - docker run --rm --user="$(id -u):$(id -g)" -v "$PWD":"/repo" -w "/repo" dockershelf/latex:full
 #   /bin/sh -c "latexmk -pdf -interaction=nonstopmode -cd **/*.tex"
-# - docker run --rm --user="$(id -u):$(id -g)" -v "$PWD":"/repo" -w "/repo/Figures" --entrypoint "/bin/sh" kramos/alpine-zip "./build-gns3p.sh"
 # deploy:
 #   provider: releases
 #   api_key:
