--- a/Figures/Fig-3.gui/project-files/dynamips/4739b3a5-51d1-4652-91ab-0581b4dd217b/configs/i1_startup-config.cfg
+++ b/Figures/Fig-3.gui/project-files/dynamips/4739b3a5-51d1-4652-91ab-0581b4dd217b/configs/i1_startup-config.cfg
@@ -22,6 +22,10 @@ line aux 0
  logging synchronous
  privilege level 15
  no login
+config term
+ int f0/0
+  ip addr 128.238.61.1 255.255.255.0
+  no shut
 !
 !
 end
