--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           echo -n "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u amirhakh --password-stdin
           docker run --rm --user="$(id -u):$(id -g)" -v "$PWD":"/repo" -w "/repo" dockershelf/latex:full  /bin/sh -c "latexmk -pdf -interaction=nonstopmode -cd **/*.tex"
-          zip Documents.zip [0-9]**/*.pdf
+          zip Documents.zip [0-9]**/*.pdf [0-9]**/*.md
       - name: Upload Release Asset (Documents)
         id: upload-release-asset-documents
         uses: actions/upload-release-asset@v1
