--- a/Figures/Fig-3.8/project-files/dynamips/2abcebd4-03d4-49ba-99ec-4ee3bb0f922d/configs/i3_startup-config.cfg
+++ b/Figures/Fig-3.8/project-files/dynamips/2abcebd4-03d4-49ba-99ec-4ee3bb0f922d/configs/i3_startup-config.cfg
@@ -63,21 +63,7 @@ interface FastEthernet0/1
  speed auto
  bridge-group 1
 !
-interface FastEthernet1/0
- no ip address
- no ip route-cache
- shutdown
- duplex auto
- speed auto
-!
-interface FastEthernet2/0
- no ip address
- no ip route-cache
- shutdown
- duplex auto
- speed auto
-!
-ip forward-protocol nd
+p forward-protocol nds
 !
 !
 no ip http server
